# calorie-estimator

./: .env.example  .gitignore  Dockerfile  README.md  README_HF.md  app.py  pyproject.toml  requirements.txt  streamlit_run.sh
.github/workflows/: sync-to-hf.yml
docs/: DEPLOYMENT_CHECKLIST.md  FILES_OVERVIEW.md  GITHUB_TO_HUGGINGFACE_SYNC.md  HUGGINGFACE_DEPLOYMENT.md  HUGGINGFACE_TOKEN_GUIDE.md  NEXT_STEPS.md  PROJECT_SUMMARY.md  QUICKSTART.md  SETUP_GUIDE.md
src/: app.py  food_recognizer.py
