[project]
name = "calorie-estimator"
version = "0.1.0"
description = "A Gradio app that estimates calorie content of food from images using Google Gemini Vision API"
requires-python = ">=3.10"
dependencies = [
    "streamlit==1.31.1",
    "google-generativeai==0.6.0",
    "pillow==10.2.0",
    "python-dotenv==1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "black==24.1.1",
    "ruff>=0.2.2",
]
